===> 2014.07.01
	- added more locales for lxdm and system
	- replaced wallpaper and logos
	- added bash completions
	- added exploits to /usr/share/exploits using sploitctl
	- added a bunch of new tools / updated tools.
	- added new packages with help flags to each wm's menus
	- added missing users and groups in /etc/passwd and /etc/group

===> 2014.04.21
	- added new system packages: mplayer, abs, ack, bc, bridge-utils, darkhttpd,
		flashplugin, inotify-tools, irssi, makepasswd, mercurial, mplayer, rtorrent,
		scrot, strace, tor-browser-en
	- added .Xresources with entries for xterm
	- added wicd to system start (systemctl)
	- added wicd and wicd-gtk networkmanager
	- removed 'xset r rate 150 100' entry for X
	- updated menu entries
	- added more than 150 new tools
	- replaced zathura pdf reader with mupdf

===> 2014.03.02
	- package: added zathura
	- package: added lsof
	- package: added pkgfile
	- disabled pc speaker beep
	- added initial /etc/motd with notes
	- vim: removed alias of vi="vim"
	- vim: disabled remap of ':'
	- vim: set ttimeoutlen=100
	- added this ChangeLog :)