@@ -74,7 +74,7 @@ Defaults timestamp_timeout += -1
 root ALL=(ALL) ALL
 
 ## Uncomment to allow members of group wheel to execute any command
-# %wheel ALL=(ALL) ALL
+#%wheel ALL=(ALL) ALL
 
 ## Same thing without a password
 # %wheel ALL=(ALL) NOPASSWD: ALL
@@ -89,4 +89,4 @@ root ALL=(ALL) ALL
 
 ## Read drop-in files from /etc/sudoers.d
 ## (the '#' here does not indicate a comment)
-#includedir /etc/sudoers.d
+includedir /etc/sudoers.d
