@@ -1,0 +1,274 @@
+#graphite colors by Lokheed modified -bvc
+style "theme-default"
+{
+  GtkButton      ::default_border    = { 0, 0, 0, 0 }
+  GtkRange       ::trough_border     = 0
+  GtkPaned       ::handle_size       = 6
+  GtkRange       ::slider_width      = 15
+  GtkRange       ::stepper_size      = 15
+
+  GtkScrollbar   ::min_slider_length = 30
+  GtkCheckButton ::indicator_size    = 14
+  GtkMenuBar     ::internal-padding  = 0
+  GtkTreeView    ::expander_size     = 14
+  GtkExpander    ::expander_size     = 16
+  GtkScale       ::slider-length     = 24
+  
+  xthickness = 1
+  ythickness = 1
+
+  fg[NORMAL]	    = "#eaeaea" # Metacity and mouseover, Most text
+  fg[PRELIGHT]      = "#ffffff" # Text when mouseover
+  fg[ACTIVE]	    = "#eaeaea" # Text when mouseclicking button, Tabs, Active window list
+  fg[SELECTED]      = "#eaeaea" # Metacity X when window selected
+  fg[INSENSITIVE]   = "#606060" # Insensitive Text
+
+  bg[NORMAL]	    = "#1b1b1b" # Normal Background, inactive Metacity bar, buttons
+  bg[PRELIGHT]	    = "#303030" # Mouseover buttons
+  bg[ACTIVE]	    = "#141414" # Mouseclicking, Tabs, active window list
+  bg[SELECTED]	    = "#eaeaea" # Metacity Bar
+  bg[INSENSITIVE]   = "#000000" # Insensitive buttons
+	
+  base[NORMAL]	    = "#222222" # Background, most
+  base[PRELIGHT]    = "#051017" # Mouseover menu
+  base[ACTIVE]	    = "#181818" # Menu active item in inactive window
+  base[SELECTED]    = "#303030" # Menu active item in active window
+  base[INSENSITIVE] = "#000000" # Background, insensitive
+	
+  text[NORMAL]	    = "#eaeaea" # Text in window
+  text[PRELIGHT]    = "#eaeaea" # Text on Mouseover
+  text[ACTIVE]	    = "#eaeaea" # Active text in inactive window
+  text[SELECTED]    = "#eaeaea" # Active text in active window
+  text[INSENSITIVE] = "#eaeaea" # Unknown
+
+  GnomeHRef::link_color	      = "#424449" 
+  GtkIMHtmlr::hyperlink-color = "#424449"
+
+  NautilusIconContainer::normal_alpha = 0
+  NautilusIconContainer::frame_text = 1
+  #NautilusIconContainer::dark_info_color="#827B69"
+  #NautilusIconContainer::light_info_color="#827B69"
+  #NautilusIconContainer::highlight_alpha=70
+
+  engine "murrine" 
+  {
+	 scrollbar_color     = "#303030"
+	 contrast 	     = 1.0
+	 menubarstyle        = 1 # 0 = flat, 1 = glass, 2 = gradient
+	 menubaritemstyle    = 0 # 0 = menuitem look, 1 = button look
+	 listviewheaderstyle = 0 # 0 = flat, 1 = glass
+	 # Murrine <  0.30
+	 # squaredstyle      = 1 # 0 = default (rounded), 1 = squared
+	 # Murrine >= 0.30
+	 roundness           = 3 # 0 = default (rounded), 1 = squared
+    	 animation           = TRUE
+  }
+}
+
+
+style "theme-wide" = "theme-default"
+{
+  xthickness = 2
+  ythickness = 2
+}
+
+style "theme-wider" = "theme-default"
+{
+  xthickness = 3
+  ythickness = 3
+}
+
+style "theme-entry" = "theme-wider"
+{
+  bg[SELECTED]	    = "#262626"
+}
+
+style "theme-button" = "theme-wider"
+{
+  bg[NORMAL]      = "#141414"
+  bg[ACTIVE]      = "#303030"
+}
+
+style "theme-notebook" = "theme-wide"
+{
+
+}
+
+style "theme-tasklist" = "theme-default"
+{
+  xthickness = 5
+  ythickness = 3
+}
+
+style "theme-tree" = "theme-default"
+{
+  xthickness = 2
+  ythickness = 2
+}
+
+style "theme-frame-title" = "theme-default"
+{
+  fg[NORMAL] = "#eaeaea"
+}
+
+style "theme-tooltips" = "theme-default"
+{
+  xthickness = 4
+  ythickness = 4
+  bg[NORMAL] = "#101010"
+  fg[NORMAL] = "#eaeaea"
+}
+
+style "theme-progressbar" = "theme-wide"
+{
+  xthickness = 1
+  ythickness = 1
+  fg[PRELIGHT]  = "#ffffff"
+}
+
+style "theme-combo" = "theme-button"
+{
+}
+
+# ------------------------------------------------------------------------ Menu
+
+style "khali-menu" = "khali-default"
+{
+  xthickness = 0
+  ythickness = 3
+
+  bg[NORMAL] = "#101010"
+}
+
+style "khali-menu-item" = "khali-test"
+{
+  xthickness = 15
+  ythickness = 2
+
+  bg[SELECTED]    = "#eaeaea"
+
+  # Text
+  fg[NORMAL]      = "#eaeaea"
+  text[NORMAL]    = "#eaeaea"
+  fg[PRELIGHT]    = "#101010"
+  fg[INSENSITIVE] = "#101010"
+
+  # Ticker Mark
+  text[PRELIGHT]  = "#101010"
+
+  # Radio Button
+  base[NORMAL]    = "#101010"
+  base[PRELIGHT]  = "#eaeaea"
+
+  # font_name = "LucidaMacBold 8"#"Trebuchet MS Bold 10"
+}
+
+widget_class "*MenuItem.*" style "khali-menu-item"
+class "GtkMenu" style "khali-menu"
+class "GtkMenuItem" style "khali-menu-item"
+
+# -------------------------------------------------------------------- Menu Bar
+
+# Dropdown menu for the menu bar are handled as 'Menu'
+
+style "khali-menubar" = "khali-default"
+{
+  xthickness = 0
+  ythickness = 1
+
+  bg[NORMAL] = "#101010"
+}
+
+style "khali-menubar-label" = "khali-default"
+{
+  xthickness = 2
+  ythickness = 1
+
+  fg[NORMAL]   = "#eaeaea"
+  fg[PRELIGHT] = "#101010"
+
+  #font_name = "LucidaMacBold 8"#"Trebuchet MS Bold 10"
+}
+
+style "khali-menubar-item" = "khali-default"
+{
+  xthickness = 2
+  ythickness = 1
+
+  bg[SELECTED] = "#eaeaea"
+}
+
+# -------------------------------------------------------------- Deskbar Applet
+
+style "khali-deskbar" = "khali-default"
+{
+  xthickness = 3
+  ythickness = 3
+
+  fg[NORMAL]     = "#101010"
+  bg[NORMAL]     = "#222222"
+  base[NORMAL]   = "#101010"
+  text[NORMAL]   = "#eaeaea"
+
+  fg[SELECTED]   = "#eaeaea"
+  bg[SELECTED]   = "#151515"
+  base[SELECTED] = "#303030"
+  text[SELECTED] = "#eaeaea"
+
+  fg[PRELIGHT]   = "#303030"
+  fg[ACTIVE]     = "#202020"
+  bg[ACTIVE]     = "#202020"
+  base[ACTIVE]   = "#707070"
+  text[ACTIVE]   = "#101010"
+}
+
+style "khali-deskbar-entry" = "khali-deskbar"
+{
+  xthickness = 3
+  ythickness = 3
+
+  base[NORMAL] = "#222222"
+}
+
+class "GtkMenuBar" style "khali-menubar"
+widget_class "*.*MenuBar.*MenuItem" style "khali-menubar-item"
+widget_class "*.*MenuBar.*Label"    style "khali-menubar-label"
+
+style "khali-window" = "khali-default"
+{
+  bg[SELECTED] = "#202020" # window title background
+}
+
+class "GtkWindow" style "khali-window"
+
+# widget styles
+class "GtkWidget"      style "theme-default"
+class "GtkButton"      style "theme-button"
+class "GtkScale"       style "theme-button"
+class "GtkCombo"       style "theme-button"
+class "GtkRange"       style "theme-wide"
+class "GtkFrame"       style "theme-wide"
+class "GtkEntry"       style "theme-entry"
+class "GtkNotebook"    style "theme-notebook"
+class "GtkProgressBar" style "theme-progressbar"
+
+# combobox stuff
+widget_class "*.GtkComboBox.GtkButton" style "theme-combo"
+widget_class "*.GtkCombo.GtkButton"    style "theme-combo"
+# tooltips stuff
+widget_class "*.tooltips.*.GtkToggleButton" style "theme-tasklist"
+widget "gtk-tooltips" style "theme-tooltips"
+
+# treeview stuff
+widget_class "*.GtkTreeView.GtkButton" style "theme-tree"
+widget_class "*.GtkCTree.GtkButton" style "theme-tree"
+widget_class "*.GtkList.GtkButton" style "theme-tree"
+widget_class "*.GtkCList.GtkButton" style "theme-tree"
+widget_class "*.GtkFrame.GtkLabel" style "theme-frame-title"
+
+# notebook stuff
+widget_class "*.GtkNotebook.*.GtkEventBox" style "theme-notebook"
+widget_class "*.GtkNotebook.*.GtkViewport" style "theme-notebook"
+
+widget "deskbar*.*Box*"   style "khali-deskbar-entry"
+widget "deskbar*.*Tree*" style "khali-deskbar"
