@@ -1,0 +1,86 @@
+input[type="text"],
+input[type="password"],
+input:not([type]) {
+	border: 2px solid !important;
+	-moz-border-top-colors: #7C7C7C #C3C3C3;
+	-moz-border-left-colors: #C2C2C2 #EFEFEF;
+	-moz-border-right-colors: #C2C2C2 #EFEFEF;
+	-moz-border-bottom-colors: #DDDDDD #FEFEFE;
+	background-color: rgb(246, 246, 246) !important;
+	color:  rgb(10, 10, 10);
+}
+
+button, 
+input[type="reset"],
+input[type="button"],
+input[type="submit"],
+select:not([multiple]) {
+	border: 2px solid !important;
+	-moz-border-bottom-colors: #999999 #CECECE;
+	-moz-border-left-colors: #737373 #FFFFFF;
+	-moz-border-right-colors: #999999 #CECECE;
+	-moz-border-top-colors: #737373 #FFFFFF;
+	background-image: url("chrome://browser/skin/bookmark_toolbar_background.gif");
+	background-repeat: repeat-x !important;
+	background-position: bottom right !important;
+        -moz-border-radius: 1px !important;
+	background-color: rgb(246, 246, 246) !important;
+	color:  rgb(10, 10, 10);
+}
+
+button:focus:active, 
+input[type="reset"]:hover:active,
+input[type="button"]:hover:active,
+input[type="submit"]:hover:active,
+select:not([multiple]):hover:active {
+	border: 2px solid !important;
+	-moz-border-top-colors: #999999 #CECECE !important;
+	-moz-border-right-colors: #737373 #FFFFFF !important;
+	-moz-border-left-colors: #999999 #CECECE !important;
+	-moz-border-bottom-colors: #737373 #FFFFFF !important;
+	background-color: rgb(246, 246, 246) !important;
+	color:  rgb(10, 10, 10);
+}
+
+select > input[type="button"] {
+	border-top: none !important;
+	border-left: 1px solid #CECECE !important;
+	border-right: none !important;
+	border-bottom: none !important;
+	background-image: none !important;
+	background-color: transparent !important;
+	color:  rgb(10, 10, 10);
+}
+	
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input:not([type]):focus,
+textarea:focus,
+select[multiple]:focus  {
+	
+	-moz-border-top-colors: -moz-mac-focusring -moz-mac-focusring !important;
+	-moz-border-left-colors: -moz-mac-focusring -moz-mac-focusring !important;
+	-moz-border-right-colors: -moz-mac-focusring -moz-mac-focusring !important;
+	-moz-border-bottom-colors: -moz-mac-focusring -moz-mac-focusring !important;
+	-moz-border-radius: 1px !important;
+	background-color: rgb(246, 246, 246) !important;
+	color:  rgb(10, 10, 10);
+}
+
+textarea, select[multiple] {
+	border: 2px solid !important;
+	-moz-border-bottom-colors: transparent #999999 !important; 
+	-moz-border-left-colors: transparent #999999 !important; 
+	-moz-border-right-colors: transparent #999999 !important; 
+	-moz-border-top-colors: transparent #737373 !important;
+	-moz-border-raius-top-right: 1px;
+	-moz-border-radius-bottom-right: 1px;
+	background-color: rgb(246, 246, 246) !important;
+	color: rgb(10, 10, 10);
+}
+
+html {
+	color: rgb(10, 10, 10);
+      	background: rgb(246, 246, 246);
+}
